<resources>
    <string name="app_name">NUMAD25Su_Group9</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="Transactions">Transactions</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="Save">Save</string>
    <string name="spending">Spending</string>
    <string name="budget">Budget</string>
    <string name="profile">Profile</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="zero_dollars">$0.00</string>
    <string name="email_helper">Choose an email address</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="previous_month">Previous Month\n</string>
    <string name="next_month">Next Month</string>
    <string name="Ignore">Ignore</string>
    <string name="hyphen">—</string>
    <string name="pick_month">Pick Month</string>
    <string name="pick_year">Pick Year</string>
    <string name="total">Total: —</string>
    <string name="remaining">Remaining: —</string>
    <string name="Delete">Delete</string>
    <string name="edit_transaction">Edit Transaction</string>
    <string name="profile_banner">Profile</string>
    <string name="displayName">Display Name</string>
    <string name="displayName_helper">Choose a display name</string>
    <string name="associate_location">Save Location</string>
    <string name="spending_this_month">Spending this month</string>
    <string name="personal_details">Personal Details</string>
    <string name="profile_name">Name:</string>
    <string name="profile_email">Email:</string>
    <string name="budget_settings">Budget Settings</string>
    <string name="monthly_budget">Monthly Budget: $</string>
    <string name="_0_00">0.00</string>
    <string name="update">Update</string>
    <string name="expense_categories">Expense Categories</string>
    <string name="enter_new_category">Enter New Category</string>
    <string name="add">Add</string>
    <string name="sign_out">Sign Out</string>
    <string name="appName">Budget Your Life</string>
    <string name="password_helper">Choose a password</string>
    <string name="alert_settings">Alert Settings</string>
    <string name="location_based_alerts">Location based alerts</string>
    <string name="monthly_budget_colon">Monthly Budget:</string>
    <string name="_0">$0</string>
</resources>